# stepik

./: Enigma.ipynb  pyproject.toml
Week1/: Ave Caesar.ipynb  Constant Kaprekar.ipynb  Kaprekar's number.ipynb  Lucas sequence.ipynb  Sage multiplication.ipynb  Seminar 1.ipynb
Week1/.ipynb_checkpoints/: Enigma-checkpoint.ipynb
Week2/: Numpy basic.ipynb  Numpy-100 (1-10).ipynb
Week2/.ipynb_checkpoints/: Numpy-100 (1-10)-checkpoint.ipynb
