[tool.poetry]
name = "stepik-math-and-python"
version = "0.1.0"
description = ""
authors = ["Razmanov666 <razmanov666@gmail.com>"]
readme = "README.md"
packages = [{include = "stepik_math_and_python"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.2"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
